# reconcile-pkp-beacon-journals-w-openalex-affiliation-metadata

./: README.md
check_landing_page_author_affiliation_parsing_against_openalex/: README.md
check_landing_page_author_affiliation_parsing_against_openalex/utils/: README.md  get_stats.py
compare_openalex/: README.md
compare_openalex/check_landing_page_author_affiliation_parsing_against_openalex/: check_landing_page_author_affiliation_parsing_against_openalex.py
compare_openalex/get-openalex-works-with-pkp-beacon-base-url-and-affiliations/: Cargo.toml  README.md
compare_openalex/get-openalex-works-with-pkp-beacon-base-url-and-affiliations/src/: main.rs
compare_openalex/parse_record_data_from_files/: README.md  parse_record_data_from_files.py
compare_openalex/retrieve_landing_pages/: README.md  retrieve_landing_pages.py
download_sample_pkp_pdfs/retrieve_pkp_work_url_download_pdf/: README.md  retrieve_pkp_work_url_download_pdf.py
download_sample_pkp_pdfs/sample_pdfs_from_directory/: README.md
get-openalex-works-with-pkp-beacon-base-url-and-affiliations/src/: main.rs
get_journal_base_urls_from_pkp_beacon_file/: README.md  get_journal_base_urls_from_pkp_beacon_file.py
parse_landing_page_html/: README.md  parse_landing_page_html.py
retrieve_landing_pages/: README.md
retrieve_pkp_work_url_download_pdf/: README.md
utils/sample_pdfs_from_directory/: sample_pdfs_from_directory.py
utils/transformers_vlm_text_extractor/: README.md  requirements.txt  transformers_vlm_text_extractor.py
utils/vlm_text_extractor/: README.md  vlm_text_extractor.py
(+1 files in other folders)
