[package]
name = "get-openalex-works-with-pkp-beacon-base-url"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
flate2 = "1.0"
glob = "0.3"
indicatif = "0.17"
log = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "4.3"
time = { version = "0.3", features = ["macros"] }
num_cpus = "1.16"
url = "2.5"
uuid = { version = "1.6", features = ["v4"] }